# RagBase

./: .env.example  .gitignore  README.md  assign_collections.py  assign_remaining.py  check_chunks.py  check_chunks2.py  classify_docs.py  classify_v2.py  docker-compose.yml  ingest_all_playlists.py  pyproject.toml  sources.yaml  whisper_server.py
docker/postgres/: init.sql
docs/: SETUP.md
docs/plans/: 2026-02-16-rag-implementation-plan.md  2026-02-16-rag-stack-design.md
scripts/: backfill_transcripts.py
src/rag/: __init__.py  api.py  cli.py  config.py  models.py
src/rag/api_routes/: chat.py  collections.py  documents.py  graph.py  pipeline.py  ratings.py  search.py  sources.py  tags.py
src/rag/generation/: citation.py  llm.py  router.py
src/rag/ingestion/: base.py  document.py  folder_scanner.py  pdf.py  reddit.py  twitter.py  web.py  youtube.py
src/rag/pipeline/: __init__.py  dedup.py  deploy.py  flows.py  sources.py  tasks.py  youtube_auth.py
src/rag/processing/: chunking.py  embedding.py  graph_builder.py  ner.py  topics.py
src/rag/retrieval/: hybrid.py  reranker.py
src/rag/storage/: neo4j_store.py  postgres.py  qdrant.py
src/rag/templates/: base.html
tests/: test_models.py
tests/generation/: test_citation.py  test_router.py
tests/ingestion/: test_pdf.py  test_reddit.py  test_twitter.py  test_web.py  test_youtube.py
tests/processing/: test_chunking.py  test_embedding.py  test_graph_builder.py  test_ner.py  test_topics.py
tests/retrieval/: test_hybrid.py  test_reranker.py
tests/storage/: test_neo4j.py  test_postgres.py  test_qdrant.py
(+16 files in other folders)
